# aruco-object-drop

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  cameraCalibration.xml  cameraCalibration_mapir_1440p.xml  cameraCalibration_random_480p.xml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/hooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  code-formatting-check.yml  code-formatting.yml  commit-message-check.yml  docstrings-check.yml  pr-title-check.yml  type-check.yml
aruco-object-drop/src/: main.py
aruco-object-drop/src/modules/: __init__.py
aruco-object-drop/src/utils/: __init__.py
aruco_object_drop/: __init__.py  camera_pose_estimation_with_kalman.py  camera_tilt_correction.py  live_plot.py  no_gui_camera_tilt_correction.py  test.py  tracking_kalman.py
aruco_object_drop/camera_calibration/: CameraCalibration.py  Picam_take_pics.py  Take_pictures_calibration.py
aruco_object_drop/src/: main.py
tests/: __init__.py  test_main.py
