[tool.poetry]
name = "aruco-object-drop"
version = "0.1.0"
description = ""
authors = ["kmalkow <k.malkow@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
