[tool.poetry]
name = "aruco-object-drop"
version = "0.1.0"
description = ""
authors = ["kmalkow <k.malkow@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
black = "^24.4.2"
pytest = "^8.3.1"
pydocstyle = "^6.3.0"
mypy = "^1.11.0"
flake8 = "^7.1.0"
safety = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
